<resources>
    <string name="app_name">CryptOvalyte</string>
    <string name="tvPrice">7600</string>
    <string name="tvLastTime">Последнее время обновления 01:53:22</string>
    <string name="tvImage">tvImage</string>
    <string name="symbols_template">%s / %s</string>
    <string name="last_update_template">Время последнего обновления: %s</string>
    <string name="todo">TODO</string>


    <string name="price">Цена</string>
    <string name="minPrice">Минимум за день</string>
    <string name="maxPrice">Максимум за день</string>
    <string name="lastOrder">Последняя сделка</string>
    <string name="reloaded">Обновленно</string>

    <string name="priceInt">7553</string>
    <string name="minPriceInt">7442</string>
    <string name="maxPriceInt">7883</string>
    <string name="lastOrderInt">Briwing</string>
    <string name="reloadedInt">25:53:22</string>
    <string name="tvImageDetail">tvImageDetail</string>
</resources>